syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";


service DiscountProtoService {
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc ReadDiscount (ReadDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}


message CouponModel {
	int32 id = 1;  // numbers are used like unique ids used for serialization
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;  
}

message ReadDiscountRequest {
	string productName = 1;  
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;  
}

message DeleteDiscountRequest {
	string productName = 1;  
}

message DeleteDiscountResponse {
	bool success = 1;  
}
